# deltas

./: .env.example  .gitignore  API_WALKTHROUGH.md  CLI_WALKTHROUGH.md  LICENSE  QUICKSTART_CLI.md  README.md  pyproject.toml
.claude/: settings.local.json
data/pricing_database/: repair_costs.json
data/sample_scenarios/: scenario_01_minor_scratch_auto_approve.json  scenario_02_luxury_bumper_human_review.json  scenario_03_pattern_detection_frequent_damage.json  scenario_04_retirement_decision.json  scenario_05_agent_demo.json
data/vehicle_fleet/: fleet_data.json
docs/: ARCHITECTURE.md  REQUIREMENTS.md  RESEARCH.md
docs/presentations/: stakeholder_deck.md
migrations/: 001_add_ai_reasoning_columns.sql
scripts/: apply_migrations.sh  demo_agents.py  demo_cli.sh  demo_tensorlake.py  init_database.py  run_workflow_demo.py  test_database.py  validate_llm_connection.py
src/agents/: __init__.py  base_agent.py  cost_estimator_agent.py  validator_agent.py
src/api/: __init__.py  main.py
src/cli/: main.py
src/config/: settings.py
src/graph/: __init__.py  nodes.py  workflow.py
src/models/: __init__.py  damage.py  events.py  financial.py  routing.py  state.py
src/persistence/: __init__.py  database.py  repositories.py
src/services/: __init__.py  approval_service.py  depreciation_service.py  event_logger.py  fleet_analytics_service.py  pattern_recognition_service.py  pricing_service.py  tensorlake_service.py
tests/: conftest.py  test_setup.py
tests/test_agents/: test_base_agent.py  test_cost_estimator_agent.py  test_validator_agent.py
(+18 files in other folders)
